<resources>
    <string name="app_name">Omnical</string>
    <string name="result_hint">Result</string>
    <string name="expression_hint">Enter expression here</string>

    <string name="button_double_zero">00</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_decimal">.</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">x</string>
    <string name="button_divide">/</string>
    <string name="button_clear">C</string>
    <string name="button_left_parenthesis">(</string>
    <string name="button_right_parenthesis">)</string>
    <string name="button_equal_to">=</string>
    <string name="change_theme">Theme</string>
    <string name="delete">Delete</string>
    <string name="expression">Expression</string>
    <string name="clear">Clear all</string>
    <string name="left_parenthesis">Left Parenthesis</string>
    <string name="right_parenthesis">Right Parenthesis</string>
    <string name="divide">Divide</string>
    <string name="seven">seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="multiply">Multiply</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">six</string>
    <string name="minus">Minus</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="plus">Plus</string>
    <string name="double_zero">Double zero</string>
    <string name="zero">Zero</string>
    <string name="decimal">Decimal</string>
    <string name="equal_to">Equal to</string>
    <string name="invalidExpression">Invalid Expression!</string>
    <string name="invalidOperator">"Invalid Operator: "</string>
    <string name="sharedPrefs">SHARED PREFS</string>
    <string name="continuous_input">Continuous input</string>
    <string name="first_run">First Run</string>
    <string name="shared_prefs">SHARED PREFS</string>
</resources>