<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom">

    <!-- Row 0 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_clear"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_clear"/>
        <Button
            android:id="@+id/btn_left_paran"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_left_paran" />
        <Button
            android:id="@+id/btn_right_paran"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_right_paran" />
        <Button
            android:id="@+id/btn_divide"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_divide" />
    </LinearLayout>

    <!-- Row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_7"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_seven"/>
        <Button
            android:id="@+id/btn_8"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_eight" />
        <Button
            android:id="@+id/btn_9"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_nine" />
        <Button
            android:id="@+id/btn_multiply"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_multiply" />
    </LinearLayout>

    <!-- Row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_4"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_four" />
        <Button
            android:id="@+id/btn_5"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_five" />
        <Button
            android:id="@+id/btn_6"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_six" />
        <Button
            android:id="@+id/btn_minus"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_minus" />
    </LinearLayout>

    <!-- Row 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_1"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_one" />
        <Button
            android:id="@+id/btn_2"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_two" />
        <Button
            android:id="@+id/btn_3"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_three" />
        <Button
            android:id="@+id/btn_plus"
            style="@style/myGridButtonStyleOperator"
            android:background="@drawable/button_state"
            android:text="@string/button_plus" />
    </LinearLayout>

    <!-- Row 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_00"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_double_zero" />
        <Button
            android:id="@+id/btn_0"
            style="@style/myGridButtonStyleNumber"
            android:background="@drawable/button_state"
            android:text="@string/button_zero" />
        <Button
            android:id="@+id/btn_dot"
            style="@style/myGridButtonStyleNumber"
            android:textSize="18sp"
            android:background="@drawable/button_state"
            android:text="@string/button_decimal" />
        <Button
            android:id="@+id/btn_equal"
            style="@style/myGridButtonStyleEqualTo"
            android:background="@drawable/button_state"
            android:text="@string/button_equal_to" />
    </LinearLayout>
</LinearLayout>